--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Tzedeka Dashboard</title>
 </head>
 <body>
-    <h1>TZEDEKA ddd</h1>
-    <section id="container">hola bibi</section>
+    <section id="container"></section>
     <script type="module" src="main.js"></script>
 </body>
 </html>
