--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,24 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script> -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
     <script>
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    // var firebaseConfig = {
-    // apiKey: "AIzaSyA1twGkpUvV-hwYyQ2rtiuIKJGqv60cOyc",
-    // authDomain: "tzedeka-br.firebaseapp.com",
-    // projectId: "tzedeka-br",
-    // storageBucket: "tzedeka-br.appspot.com",
-    // messagingSenderId: "372771405290",
-    // appId: "1:372771405290:web:8dc71f672bc3db071d8693",
-    // measurementId: "G-LGQ098YTVS"
-    // };
+    var firebaseConfig = {
+    apiKey: "AIzaSyA1twGkpUvV-hwYyQ2rtiuIKJGqv60cOyc",
+    authDomain: "tzedeka-br.firebaseapp.com",
+    projectId: "tzedeka-br",
+    storageBucket: "tzedeka-br.appspot.com",
+    messagingSenderId: "372771405290",
+    appId: "1:372771405290:web:8dc71f672bc3db071d8693",
+    measurementId: "G-LGQ098YTVS"
+    };
     // --Initialize Firebase
-    // firebase.initializeApp(firebaseConfig);
-    // firebase.analytics();
+    // memo@gmail.com, memo1234
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
     </script>
 </body>
 </html>
